# FEM_FrontISTR

./: .gitattributes  .gitignore  .gitlab-ci.yml  FISTR_solver.py  Init.py  InitGui.py  ObjectsFISTR.py  README.md  constraint_temperature_fistr.py  fistrtools.py  importfistrAvsResults.py  importfistrDatResults.py  importfistrFrdResults.py  material_creep_fistr.py  material_hyperelastic_fistr.py  material_viscoelastic_fistr.py  membertools_fistr.py  package.xml  solver_fistrtools.py  task_constraint_temperature_fistr.py  task_material_viscoelastic_fistr.py  task_solver_fistrtools.py  view_constraint_temperature_fistr.py  view_material_creep_fistr.py  view_material_hyperelastic_fistr.py  view_material_viscoelastic_fistr.py  view_solver_fistrtools.py
Resources/: MaterialViscoelasticFrontISTR.ui  SolverFrontISTR.ui  TaskConstraintTemperatureFrontISTR.ui  TaskFrontISTRConstraintTemperature.ui
doc/en/: Tutorial01_staticlinear.md
doc/ja/: Tutorial01_staticlinear.md
feminout_FrontISTR/: importFrontISTRMesh.py
femsolver_FrontISTR/: solver.py  tasks.py  writer.py
femtools_FrontISTR/: checksanalysis_19.py  checksanalysis_20.py
sample/: scripting.py  scripting_flange.py  scripting_visco.py
sample/benchmarks/01_gear/: README.md  data_sheet.xlsx  gear.FCStd
sample/benchmarks/02_can/: README.md  can.FCStd  data_sheet.xlsx
sample/benchmarks/03_bikeframe/: README.md  bikeframe.FCStd  data_sheet.xlsx
sample/benchmarks/04_spring/: README.md  data_sheet.xlsx  spring.FCStd
sample/showcase/: README.md
tutorial/en/: mkdocs.yml
tutorial/ja/: mkdocs.yml  usegui.md
(+10 files in other folders)
